--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,8 +109,8 @@ if (EXISTS ${FT_DIR})
 else()
   FetchContent_Declare(
     repo-ft
-    GIT_REPOSITORY https://github.com/nskool/FasterTransformer.git
-    GIT_TAG sagemaker_mme
+    GIT_REPOSITORY https://github.com/NVIDIA/FasterTransformer.git
+    GIT_TAG main
     GIT_SHALLOW ON
   )
 endif()
